--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<ul>
 				<li><a href="https://mocha-repository.info/download.php">BMS(beatoraja)、みんなこれやって自力を盛ろう</a></li>
 				<li><a href="https://archlinux.jp">Arch Linux、<strong>Archは最高！！！！</strong></a></li>
-				<li><a href="https://kirby.jp">カービィ。たのしいしかわいいよ。</a></li>
+				<li><a href="https://www.kirby.jp/">カービィ。たのしいしかわいいよ。</a></li>
 		</div>
 
 		<hr>
