--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<a href="#recommend">おすすめ集</a>
 		</header>
 		
-		<div id="profile">
+		<div class="profile">
 			<h1>プロフィール</h1>
 			<img src="images/icon.jpg">
 			<ul>
@@ -25,27 +25,30 @@
 			<p>ざっとこんなもん。この人間に救いはあるのか。</p>
 		</div>
 
-		<div id="links">
+		<div class="links">
 			<h1>リンクなど</h1>
 			<ul>
 				<li>Twitter:<a href="https://twitter.com/cooyamc">@cooyamc</a></li>
 				<li>Github:<a href="https://github.com/cooyamc">cooyamc</a></li>
+				<li>はてなブログ:<a href="https://cooyamc.hateblo.jp/">cooyamc</a></li>
 			</ul>
 		</div>
 		
-		<div id="recommend">
+		<div class="recommend">
 			<h1>おすすめ集</h1>
 			<ul>
-				<li><a href="https://mocha-repository.info/download.php">BMS(beatoraja)、みんなこれやって自力を盛ろう</a></li>
+				<li><a href="https://mocha-repository.info/download.php">BMS(beatoraja)、みんなこれやって地力を盛ろう</a></li>
 				<li><a href="https://archlinux.jp">Arch Linux、<strong>Archは最高！！！！</strong></a></li>
 				<li><a href="https://www.kirby.jp/">カービィ。たのしいしかわいいよ。</a></li>
 		</div>
 
 		<hr>
 
-		<a href="https://sites.google.com/site/happybusy/">
-			<img src="images/busy_banner.png">
-		</a>
-		<p>そこのお前！このページは一切のサービスを使わずに人力で作られてるぜ！</p>
+		<div class="footer">
+			<a href="https://sites.google.com/site/happybusy/">
+				<img src="images/busy_banner.png">
+			</a>
+			<p>そこのお前！このページは一切のフレームワークを使わずに人力で作られてるぜ！</p>
+		</div>
 	</body>
 </html>
