ちょっといじった

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<header>
 			<h1>cooyamcの物置</h1>
+			<p>書くことがない</p>
 			<a href="#profile">プロフィール</a>
 			<a href="#links">リンクなど</a>
 			<a href="#recommend">おすすめ集</a>
