Change color,  change something and add yude

--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
 		<hr>
 
 		<div class="footer">
-			<a href="https://sites.google.com/site/happybusy/">
-				<img src="images/busy_banner.png">
+			<a href="https://sites.google.com/site/happybusy">
+				<img src="images/busy_banner.png" class="banner">
+			</a>
+			<a href="https://yude.jp">
+				<img src="images/yude.png" class="banner">
 			</a>
 			<p>そこのお前！このページは一切のフレームワークを使わずに人力で作られてるぜ！</p>
 		</div>
