リニューアルしたなり

--- a/recommends.html
+++ b/recommends.html
@@ -18,10 +18,16 @@
 				<p><a href="/recommends.html">おすすめ集</a></p>
 				<p><a href="/links.html">リンク</a></p>
 			</div>
-		</div>
 
-		<div class="main">
-			<a class="twitter-timeline" data-lang="ja" data-width="500" data-height="500" href="https://twitter.com/cooyamc?ref_src=twsrc%5Etfw">Tweets by cooyamc</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-		</div>
+			<div class="main">
+				<h1>おすすめ集</h1>
+				<ul>
+					<li><a href="https://mocha-repository.info/download.php">BMS(beatoraja)、みんなこれやって地力を盛ろう</a></li>
+					<li><a href="https://archlinux.jp">Arch Linux、<strong>Archは最高！！！！</strong></a></li>
+					<li><a href="https://www.kirby.jp/">カービィ。たのしいしかわいいよ。</a></li>
+			</ul>
+
+			</div>
+		</div>	
 	</body>
 </html>
