--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,14 @@
 		</div>
 
 		<div class="main">
-			<a class="twitter-timeline" data-lang="ja" data-width="500" data-height="500" href="https://twitter.com/cooyamc?ref_src=twsrc%5Etfw">Tweets by cooyamc</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+			<h1>プロフィール</h1>
+			<img src="images/icon.jpg">
+			<ul>
+				<li>ハードウェアがﾁｮｯﾄﾃﾞｷﾙ人</li>
+				<li>Python、Goを使って遊んでいる(生産性の無いコードしか書かない)</li>
+				<li>ゲームは音ゲー、アクションが好き(BMSとかメトロイドとか)</li>
+			</ul>
+			ざっとこんなもん。この人間に救いはあるのか。
 		</div>
 	</body>
 </html>
